# Vision

./: .gitignore  README.md  pyproject.toml
Deep Dreams/: The Annotated DeepDream.py  deep-dream.ipynb  deepdream.ipynb
Face Detection/: pyproject.toml
Face Detection/notebooks/: HOG.ipynb  cascade_classifier.ipynb  cnn.ipynb
GANs/: basic_gan.ipynb  basic_gan_CalebA-Copy1.ipynb  basic_gan_CalebA.ipynb  basic_gan_CalebB.ipynb  gan_in_1d.ipynb  gan_in_2d.ipynb
GANs/DCGAN/: dcgan_CalebA.ipynb  dcgan_MNIST.ipynb
GANs/autoencoder/: autoencoder.ipynb  variational_autoencoder_e_CIFAR10.ipynb  variational_autoencoder_e_CustomDataset.ipynb  variational_autoencoder_e_MNIST.ipynb
GANs/basic_gan/: Untitled.ipynb
Object Detection/: ops.ipynb
