[tool.poetry]
name = "vision"
version = "0.1.0"
description = ""
authors = ["Jha-Pranav <pranavjha1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
