[tool.poetry]
name = "face detection"
version = "0.1.0"
description = ""
authors = ["Jha-Pranav <pranavjha1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cmake = "^3.30.2"
dlib = "^19.24.6"
face-recognition = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
